@@ -835,20 +835,21 @@ public class HtmlParserTest {
     }
 
     @Test public void tracksErrorsWhenRequested() {
-        String html = "<p>One</p href='no'>\n<!DOCTYPE html>\n&arrgh;<font />&#33 &amp &#xD800;<br /><foo";
+        String html = "<p>One</p href='no'>\n<!DOCTYPE html>\n&arrgh;<font />&#33 &amp &#xD800;<br /></div><foo";
         Parser parser = Parser.htmlParser().setTrackErrors(500);
         Document doc = Jsoup.parse(html, "http://example.com", parser);
 
         List<ParseError> errors = parser.getErrors();
-        assertEquals(8, errors.size());
+        assertEquals(9, errors.size());
         assertEquals("<1:21>: Attributes incorrectly present on end tag [/p]", errors.get(0).toString());
-        assertEquals("<2:16>: Unexpected token [Doctype] when in state [InBody]", errors.get(1).toString());
+        assertEquals("<2:16>: Unexpected Doctype token [<!doctype html>] when in state [InBody]", errors.get(1).toString());
         assertEquals("<3:2>: Invalid character reference: invalid named reference [arrgh]", errors.get(2).toString());
         assertEquals("<3:16>: Tag [font] cannot be self closing; not a void tag", errors.get(3).toString());
         assertEquals("<3:20>: Invalid character reference: missing semicolon on [&#33]", errors.get(4).toString());
         assertEquals("<3:25>: Invalid character reference: missing semicolon on [&amp]", errors.get(5).toString());
         assertEquals("<3:34>: Invalid character reference: character [55296] outside of valid range", errors.get(6).toString());
-        assertEquals("<3:45>: Unexpectedly reached end of file (EOF) in input state [TagName]", errors.get(7).toString());
+        assertEquals("<3:46>: Unexpected EndTag token [</div>] when in state [InBody]", errors.get(7).toString());
+        assertEquals("<3:51>: Unexpectedly reached end of file (EOF) in input state [TagName]", errors.get(8).toString());
     }
 
     @Test public void tracksLimitedErrorsWhenRequested() {
@@ -859,7 +860,7 @@ public class HtmlParserTest {
         List<ParseError> errors = parser.getErrors();
         assertEquals(3, errors.size());
         assertEquals("<1:21>: Attributes incorrectly present on end tag [/p]", errors.get(0).toString());
-        assertEquals("<2:16>: Unexpected token [Doctype] when in state [InBody]", errors.get(1).toString());
+        assertEquals("<2:16>: Unexpected Doctype token [<!doctype html>] when in state [InBody]", errors.get(1).toString());
         assertEquals("<3:2>: Invalid character reference: invalid named reference [arrgh]", errors.get(2).toString());
     }
 
@@ -869,6 +870,14 @@ public class HtmlParserTest {
         Document doc = Jsoup.parse(html, "http://example.com", parser);
 
         List<ParseError> errors = parser.getErrors();
+        assertEquals(0, errors.size());
+    }
+
+    @Test public void optionalPClosersAreNotErrors() {
+        String html = "<body><div><p>One<p>Two</div></body>";
+        Parser parser = Parser.htmlParser().setTrackErrors(128);
+        Document doc = Jsoup.parse(html, "", parser);
+        ParseErrorList errors = parser.getErrors();
         assertEquals(0, errors.size());
     }
 
